--- a/config/database.yml
+++ b/config/database.yml
@@ -17,20 +17,20 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: ubuntu
+  # username: ubuntu
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
 
 development:
   <<: *default
-  database: seeks_development
+  database: belt_exam_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: seeks
+  #username: belt_exam
 
   # The password associated with the postgres role (username).
   #password:
@@ -58,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: seeks_test
+  database: belt_exam_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,4 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: seeks_production
+  database: belt_exam_production
